css/cmps/app-header.css
.app-header {
    transition: background-color .5s, border .5s;
    width: 100%;
    z-index: 1;
    gap: 30px;
    min-height: 70px;
}

.app-header .search {
    flex-grow: 1;
    max-width: 720px;
    background-color: #F1F3F4;
    border-radius: 8px;
    padding: 5px 20px;
    gap: 20px;
    margin: 10px 0;
}

.app-header input[name=search] {
    outline: none;
    border: 1px solid transparent;
    font-size: 1rem;
    height: 40px;
    width: 100%;
    background-color: inherit;
}

.app-header .btn-apps {
    margin-left: auto;
    opacity: 60%;
    padding: 0.7em;
    border-radius: 3em;
    cursor: pointer;
}

.app-header .btn-apps:hover {
    background-color: #d8d8d8;
    opacity: 100%;
}

.app-header .apps-menu {
    /* overflow: hidden; */
    position: absolute;
    top: 50px;
    right: 0;
    z-index: 10;
    padding: 20px;
    background-color: white;
    border: 1px solid rgb(224, 224, 224);
    border-radius: 10px;
    gap: 30px;
    flex-direction: column;
}

.app-header .apps-menu>* {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
    padding: 20px;
}

.app-header .apps-menu>*:hover, .app-header .apps-menu>*.active {
    background-color: #f8f8f8;
}

@media (min-width: 740px) {
    .app-header .apps-menu {
        flex-direction: row;
    }
}

@media (max-width: 700px) {
    .app-header {
        display: grid;
        grid-template-columns: auto auto;
        grid-template-rows: auto auto;
        padding: 0px 10px;
        gap: 0px;
    }
    .app-header .logo {
        grid-row: 1/2
    }
    .search {
        grid-column: 1/3;
    }
    .app-header .btn-apps {
        grid-row: 1/2;
    }
}

